--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,13 +17,49 @@
    <string notr="true"/>
   </property>
   <property name="loginIcon" stdset="0">
-   <pixmap resource="myresources.qrc">:/MyImages/img/customerlogin.PNG</pixmap>
+   <pixmap>:/MyImages/img/customerlogin.PNG</pixmap>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="4" column="3">
+      <item row="1" column="3">
+       <widget class="QLineEdit" name="Edituser">
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="4">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLabel" name="userlabel">
+        <property name="font">
+         <font>
+          <family>Arial</family>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>User Name:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="3">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -95,39 +131,10 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="3">
-       <widget class="QLineEdit" name="Edituser">
-        <property name="autoFillBackground">
-         <bool>false</bool>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="4">
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLabel" name="userlabel">
-        <property name="font">
-         <font>
-          <family>Arial</family>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
+      <item row="4" column="3">
+       <widget class="QPushButton" name="pushButton">
         <property name="text">
-         <string>User Name:</string>
+         <string>Exit Program</string>
         </property>
        </widget>
       </item>
@@ -169,8 +176,6 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="myresources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
