--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -443,6 +443,21 @@
           <item row="1" column="0">
            <widget class="QListWidget" name="listWidget_members"/>
           </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="font">
+             <font>
+              <pointsize>10</pointsize>
+              <weight>75</weight>
+              <bold>true</bold>
+              <underline>true</underline>
+             </font>
+            </property>
+            <property name="text">
+             <string>List of Members</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
@@ -523,9 +538,22 @@
   <tabstop>Editpassword</tabstop>
   <tabstop>loginButton</tabstop>
   <tabstop>closeButton</tabstop>
+  <tabstop>pushButton_addMembers</tabstop>
+  <tabstop>pushButton_2_salesReport</tabstop>
+  <tabstop>pushButton_3</tabstop>
+  <tabstop>lineEdit_username</tabstop>
   <tabstop>lineEdit_numberID</tabstop>
   <tabstop>radioButton_execituveType</tabstop>
   <tabstop>lineEdit_Date</tabstop>
+  <tabstop>addButton</tabstop>
+  <tabstop>removeButton</tabstop>
+  <tabstop>viewButton</tabstop>
+  <tabstop>pushButton_returnToMenu</tabstop>
+  <tabstop>pushButton_switchAccount</tabstop>
+  <tabstop>pushButton_goBack</tabstop>
+  <tabstop>listWidget_members</tabstop>
+  <tabstop>pushButton_goBacktoMenu</tabstop>
+  <tabstop>listWidget</tabstop>
  </tabstops>
  <resources/>
  <connections/>
