--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="loginPage">
        <layout class="QGridLayout" name="gridLayout_4">
@@ -439,16 +439,6 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QListWidget" name="listWidget_members"/>
-          </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="pushButton_switchAccount">
-            <property name="text">
-             <string>Switch Account</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
             <property name="font">
@@ -468,6 +458,26 @@
            <widget class="QPushButton" name="pushButton_generateList">
             <property name="text">
              <string>Generate List</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QPushButton" name="pushButton_switchAccount">
+            <property name="text">
+             <string>Switch Account</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QListWidget" name="listWidget_members">
+            <property name="cursor" stdset="0">
+             <cursorShape>ArrowCursor</cursorShape>
+            </property>
+            <property name="currentRow">
+             <number>-1</number>
+            </property>
+            <property name="sortingEnabled">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
