--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>5</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="loginPage">
        <layout class="QGridLayout" name="gridLayout_4">
@@ -205,7 +205,7 @@
            </spacer>
           </item>
           <item row="9" column="1">
-           <widget class="QPushButton" name="pushButton_3">
+           <widget class="QPushButton" name="pushButton_exitProgram">
             <property name="text">
              <string>EXIT</string>
             </property>
@@ -260,7 +260,7 @@
            </widget>
           </item>
           <item row="8" column="1">
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="pushButton_addPurchasesPage">
             <property name="text">
              <string>GO</string>
             </property>
@@ -543,80 +543,132 @@
        <layout class="QGridLayout" name="gridLayout_13">
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_12">
-          <item row="5" column="1">
-           <widget class="QPushButton" name="pushButton_2">
+          <item row="7" column="2">
+           <widget class="QPushButton" name="pushButton_addPurchase">
             <property name="text">
              <string>Add Purchase</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_7">
-            <property name="text">
-             <string>Date :</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="dateLineEdit"/>
-          </item>
-          <item row="6" column="1">
-           <widget class="QPushButton" name="pushButton_4">
-            <property name="text">
-             <string>Remove Purchase</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QLineEdit" name="objTypeLineEdit"/>
-          </item>
-          <item row="2" column="0">
+          <item row="3" column="1">
            <widget class="QLabel" name="label_8">
             <property name="text">
              <string>Object Type :</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="0">
+          <item row="3" column="2">
+           <widget class="QLineEdit" name="objTypeLineEdit"/>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>Date :</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QLineEdit" name="dateLineEdit"/>
+          </item>
+          <item row="8" column="2">
+           <widget class="QPushButton" name="pushButton_removePurchase">
+            <property name="text">
+             <string>Remove Purchase</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="2">
+           <widget class="QPushButton" name="pushButton_backToMenu">
+            <property name="text">
+             <string>Back to Main Menu</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QLineEdit" name="nameLineEdit"/>
+          </item>
+          <item row="1" column="1">
            <widget class="QLabel" name="label_6">
             <property name="text">
              <string>Member Number : </string>
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
+          <item row="6" column="2">
+           <widget class="QLineEdit" name="quantLineEdit"/>
+          </item>
+          <item row="4" column="2">
            <widget class="QLineEdit" name="priceLineEdit">
             <property name="text">
              <string>$</string>
             </property>
            </widget>
           </item>
-          <item row="7" column="1">
-           <widget class="QPushButton" name="pushButton_5">
-            <property name="text">
-             <string>Back to Main Menu</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QLineEdit" name="nameLineEdit"/>
-          </item>
           <item row="4" column="1">
-           <widget class="QLineEdit" name="quantLineEdit"/>
-          </item>
-          <item row="3" column="0">
            <widget class="QLabel" name="label_9">
             <property name="text">
              <string>Price :</string>
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
+          <item row="6" column="1">
            <widget class="QLabel" name="label_10">
             <property name="text">
              <string>Quantity :</string>
             </property>
            </widget>
+          </item>
+          <item row="10" column="2">
+           <spacer name="verticalSpacer_8">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="2">
+           <spacer name="verticalSpacer_9">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="4" column="0">
+           <spacer name="horizontalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="6" column="3">
+           <spacer name="horizontalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </item>
@@ -667,7 +719,7 @@
   <tabstop>closeButton</tabstop>
   <tabstop>pushButton_addMembers</tabstop>
   <tabstop>pushButton_2_salesReport</tabstop>
-  <tabstop>pushButton_3</tabstop>
+  <tabstop>pushButton_exitProgram</tabstop>
   <tabstop>lineEdit_username</tabstop>
   <tabstop>lineEdit_numberID</tabstop>
   <tabstop>radioButton_execituveType</tabstop>
