--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -446,13 +446,6 @@
        <layout class="QGridLayout" name="gridLayout_7">
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_6">
-          <item row="4" column="0">
-           <widget class="QPushButton" name="pushButton_goBack">
-            <property name="text">
-             <string>Go back</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
             <property name="font">
@@ -465,20 +458,6 @@
             </property>
             <property name="text">
              <string>List of Members</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QPushButton" name="pushButton_generateList">
-            <property name="text">
-             <string>Generate List</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="pushButton_switchAccount">
-            <property name="text">
-             <string>Switch Account</string>
             </property>
            </widget>
           </item>
@@ -495,7 +474,31 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="1">
+           <widget class="QListWidget" name="listWidget_memPurch"/>
+          </item>
          </layout>
+        </item>
+        <item row="3" column="0">
+         <widget class="QPushButton" name="pushButton_goBack">
+          <property name="text">
+           <string>Go back</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QPushButton" name="pushButton_switchAccount">
+          <property name="text">
+           <string>View Member</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="pushButton_generateList">
+          <property name="text">
+           <string>Generate List</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -853,8 +856,6 @@
   <tabstop>removeButton</tabstop>
   <tabstop>viewButton</tabstop>
   <tabstop>pushButton_returnToMenu</tabstop>
-  <tabstop>pushButton_switchAccount</tabstop>
-  <tabstop>pushButton_goBack</tabstop>
   <tabstop>listWidget_members</tabstop>
   <tabstop>pushButton_goBacktoMenu</tabstop>
   <tabstop>listWidget_salesReport</tabstop>
