--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>4</number>
+       <number>5</number>
       </property>
       <widget class="QWidget" name="loginPage">
        <layout class="QGridLayout" name="gridLayout_4">
@@ -542,126 +542,26 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="page">
+      <widget class="QWidget" name="PurchViewPage">
        <layout class="QGridLayout" name="gridLayout_15">
-        <item row="1" column="0">
+        <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_14">
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <item row="2" column="4">
-           <widget class="QListView" name="listView"/>
-          </item>
-          <item row="5" column="4">
-           <widget class="QLineEdit" name="lineEdit"/>
-          </item>
-          <item row="6" column="2">
-           <widget class="QLabel" name="label_13">
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="4">
-           <widget class="QLineEdit" name="lineEdit_2"/>
-          </item>
-          <item row="5" column="2">
-           <widget class="QLabel" name="label_12">
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="4">
-           <widget class="QLineEdit" name="lineEdit_3"/>
-          </item>
-          <item row="7" column="2">
-           <widget class="QLabel" name="label_14">
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-           </widget>
-          </item>
-          <item row="8" column="4">
+          <item row="1" column="0">
            <widget class="QPushButton" name="pushButton">
             <property name="text">
-             <string>PushButton</string>
+             <string>Generate Item List</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="5">
-           <spacer name="horizontalSpacer_8">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
+          <item row="0" column="0">
+           <widget class="QListWidget" name="listWidget_Items"/>
           </item>
-          <item row="9" column="4">
+          <item row="2" column="0">
            <widget class="QPushButton" name="pushButton_2">
             <property name="text">
-             <string>PushButton</string>
+             <string>Go Back</string>
             </property>
            </widget>
-          </item>
-          <item row="1" column="4">
-           <spacer name="verticalSpacer_10">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="2" column="2">
-           <spacer name="horizontalSpacer_7">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="2">
-           <widget class="QLabel" name="label_11">
-            <property name="font">
-             <font>
-              <pointsize>10</pointsize>
-              <weight>75</weight>
-              <bold>true</bold>
-              <underline>true</underline>
-             </font>
-            </property>
-            <property name="text">
-             <string>Sales Report for a given date</string>
-            </property>
-           </widget>
-          </item>
-          <item row="10" column="4">
-           <spacer name="verticalSpacer_11">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
           </item>
          </layout>
         </item>
@@ -705,7 +605,7 @@
             </property>
            </widget>
           </item>
-          <item row="9" column="2">
+          <item row="10" column="2">
            <widget class="QPushButton" name="pushButton_backToMenu">
             <property name="text">
              <string>Back to Main Menu</string>
@@ -746,7 +646,7 @@
             </property>
            </widget>
           </item>
-          <item row="10" column="2">
+          <item row="11" column="2">
            <spacer name="verticalSpacer_8">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -797,6 +697,13 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="9" column="2">
+           <widget class="QPushButton" name="pushButton_3">
+            <property name="text">
+             <string>View All Purchases</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
